2002-03-15  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* dae/oprofiled.c: fix --version when module is not loaded

	* pp/opp_symbol.cpp:
	* pp/opp_symbol.h: avoid to padd the last field, use a positive
	  form for osf_header

	* pp/oprofpp.h:
	* pp/oprofpp.cpp:
	* pp/opf_filter.cpp:
	* pp/opprofpp_util.cpp:
	* pp/op_time.cpp: fix --sort option

2002-03-14  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* pp/op_time.cpp:
	* pp/opf_filter.cpp:
	* pp/opp_symbol.cpp:
	* pp/oprofpp_.cpp:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: handle -c0,1 and --sort #nr_ctr
	  for all post-profile tools allowing a more precise way
	  to specify on which counters tools must work

2002-03-13  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp_util.cpp: get_linenr() better handling
	  of bfd_find_nearest_line. Fix #529622

	* pp/opf_container.cpp: simplify symbol_container_impl

	* pp/opp_symbol.cpp: use ostringstream only when necessary

2002-03-09  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: some laptops have a usable local APIC
 
2002-03-09  Philippe Elie  <ph_e@club-internet.fr>

	* oprof_report: new directory, oprofpp/op_time like GUI
	* oprof_report/op_view.h: base class for view
	* oprof_report/oprof_report_main.cpp:
	* oprof_report/oprof_report.h:
	* oprof_report/oprof_report.cpp: main class
	* oprof_report/oprofpp_view.h:
	* oprof_report/oprofpp_view.cpp: oproffp like view
	* oprof_report/Makefile.in:
	* oprof_report/ui/oprof_report.base.ui: oprof_report UI
	* oprof_report/ui/Makefile.in:

	* Makefile.in:
	* configure.in: handle oprof_report

	* ui/Makefile.in: clarify how dependencies work

2002-03-08  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.2cvs

	* TODO: update
 
2002-03-07  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_container.cpp: handle osf_short_linr_info
	* pp/opp_symbol.cpp: tweak output output when
	  linenr/filename is not available

2002-03-07  John Levon  <moz@compsoc.man.ac.uk>
